# multi-server-mcp-agent

./: .gitignore  README.md  client.py  crawl.py  ingest.py  pyproject.toml
knowledge_base/langchain/: 01_LangChain overview - Docs by LangChain.md  02_Models - Docs by LangChain.md  03_Quickstart - Docs by LangChain.md  04_Agents - Docs by LangChain.md  05_Messages - Docs by LangChain.md
knowledge_base/mcp/: 01_Versioning - Model Context Protocol.md  03_Connect to remote MCP Servers - Model Context Protocol.md  04_Architecture overview - Model Context Protocol.md  06_What is the Model Context Protocol (MCP) - Model Context Protocol..md
servers/: market_server.py  math_server.py  rag_server.py  search_server.py  weather_server.py
utils/: cli.py
vector_db/: chroma.sqlite3
